[package]
name = "valorant-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.190"
anyhow = "1.0.71"
poise = "0.5.5"
shuttle-poise = "0.31.0"
shuttle-runtime = "0.31.0"
shuttle-secrets = "0.31.0"
tracing = "0.1.37"
tokio = "1.28.2"